[bugfix] Toast: line wrap in iOS (#959)

--- a/packages/common/style/var.less
+++ b/packages/common/style/var.less
@@ -41,3 +41,17 @@
 @notify-padding: 6px 15px;
 @notify-font-size: 14px;
 @notify-line-height: 20px;
+
+// Toast
+@toast-max-width: 70%;
+@toast-font-size: 14px;
+@toast-text-color: @white;
+@toast-line-height: 20px;
+@toast-border-radius: 4px;
+@toast-background-color: rgba(0, 0, 0, .7);
+@toast-icon-size: 50px;
+@toast-text-min-width: 96px;
+@toast-text-padding: 8px 12px;
+@toast-default-padding: 15px;
+@toast-default-width: 90px;
+@toast-default-min-height: 90px;
